# Parallel_Systems

./: .gitignore  CMakeLists.txt  a2_1.c  a2_2.c  a5.cpp
